--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,6 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/signup">Signup</a>
+                    </li>
                     {{/if}}
                 </ul>
             </div>
